--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ Editor settings
 
 .vscode/
 
-Mac artifacts
+# Mac artifacts
 
 .DS_Store
+
+# Project analysis (internal documentation)
+analisis.md
